--- a/latex/fillers/spell-preamble.tex
+++ b/latex/fillers/spell-preamble.tex
@@ -12,16 +12,21 @@
 %% Make the card the size of an MTG Card
 \usepackage[paperheight=8.89cm,paperwidth=6.35cm,margin=0.5cm]{geometry}
 
+%% Set default path for images
+\graphicspath{{./../../images/}}
+
 %% Set the background of a card
 \usepackage{background}
 \backgroundsetup{
-    contents={\includegraphics[width=\paperwidth,height=\paperheight]{images/background}}
+    contents={\includegraphics[width=\paperwidth,height=\paperheight]{background}}
 }
 
 %% Fonts and colors
 \usepackage{fontspec}
-\setmainfont[
-	BoldFont={Mrs Eaves OT Bold}]{Mrs Eaves OT}
+\setmainfont[Path = ./../../fonts/,
+	UprightFont={mrs_eaves-roman},
+	BoldFont={mrs_eaves-bold}]
+	{mrs_eaves}
 
 \definecolor{dnd-red}{RGB}{88,23,13}
 \definecolor{dnd-lightgreen}{RGB}{224,229,193}
@@ -32,59 +37,59 @@
 	\newcommand{\spellname}[1]{\centering\color{dnd-red}\textsc{#1}}
 	\newcommand{\ritual}{
 		\centering
-		\includegraphics[align=c, scale=0.12]{./images/requirements/ritual.png}
+		\includegraphics[align=c, scale=0.12]{requirements/ritual.png}
 		\textsc{\scriptsize{ritual}}}
-	
-	
+
+
 	% Spell level
 	\newcommand{\spelllevel}[1]{\raisebox{-0.33em}{\huge\textsc{#1}}}
 	\newcommand{\spellleveltext}{\tiny\textsc{spell level}}
 	\newcommand{\cantriptext}{\tiny\textsc{cantrip}}
-	
+
 	% School of magic
 	\newcommand{\magicschool}[1]{
-		\includegraphics[align=c, scale=0.09]{./images/magic/#1.png}}
+		\includegraphics[align=c, scale=0.09]{magic/#1.png}}
 	\newcommand{\magicschooltext}[1]{\tiny\textsc{#1}}
-	
+
 	% Spell info
 	\newcommand{\casttime}[1]{
-		\includegraphics[align=c, scale=0.2]{./images/requirements/casttime.png}
+		\includegraphics[align=c, scale=0.2]{requirements/casttime.png}
 		\hspace{0.1em}
 		\raisebox{-0.05em}{\textsc{#1}}}
 	\newcommand{\range}[1]{
-		\includegraphics[align=c, scale=0.2]{./images/requirements/range.png}
+		\includegraphics[align=c, scale=0.2]{requirements/range.png}
 		\hspace{0.1em}
 		\raisebox{-0.1em}{\textsc{#1}}}
 	\newcommand{\area}[2]{
 		\raisebox{-0.1em}{/ \textsc{#1}}
 		\hspace{0.1em}
-		\includegraphics[align=c, scale=0.2]{./images/area/#2.png}}
+		\includegraphics[align=c, scale=0.2]{area/#2.png}}
 	\newcommand{\duration}[1]{
-		\includegraphics[align=c, scale=0.2]{./images/requirements/duration.png}
+		\includegraphics[align=c, scale=0.2]{requirements/duration.png}
 		\hspace{0.1em}
 		\raisebox{-0.15em}{\textsc{#1}}}
 	\newcommand{\concentration}{
-		\includegraphics[scale=0.12]{./images/requirements/concentration.png}
+		\includegraphics[scale=0.12]{requirements/concentration.png}
 		\hspace{0.1em}}
-		
+
 	\newcommand{\spellref}[1]{\raggedleft{\footnotesize\textbf{{#1}}}}
-	
+
 
 
 	% COMPONENTS
 
 \newcommand{\verbal}{\makebox[0.13\textwidth]{
-		\includegraphics[align=c, scale=0.25]{./images/requirements/verbal.png}}}		
+		\includegraphics[align=c, scale=0.25]{requirements/verbal.png}}}
 \newcommand{\somatic}{\makebox[0.13\textwidth]{
-	\includegraphics[align=c, scale=0.25]{./images/requirements/somatic.png}}}
+	\includegraphics[align=c, scale=0.25]{requirements/somatic.png}}}
 \newcommand{\material}{\makebox[0.13\textwidth]{
-	\includegraphics[align=c, scale=0.25]{./images/requirements/material.png}}}
+	\includegraphics[align=c, scale=0.25]{requirements/material.png}}}
 \newcommand{\nverbal}{\makebox[0.13\textwidth]{
-	\includegraphics[align=c, scale=0.25]{./images/requirements/non-verbal.png}}}
+	\includegraphics[align=c, scale=0.25]{requirements/non-verbal.png}}}
 \newcommand{\nsomatic}{\makebox[0.13\textwidth]{
-	\includegraphics[align=c, scale=0.25]{./images/requirements/non-somatic.png}}}
+	\includegraphics[align=c, scale=0.25]{requirements/non-somatic.png}}}
 \newcommand{\nmaterial}{\makebox[0.13\textwidth]{
-	\includegraphics[align=c, scale=0.25]{./images/requirements/no-material.png}}}
+	\includegraphics[align=c, scale=0.25]{requirements/no-material.png}}}
 
 %%%%%% SETTINGS
 \setlength{\parindent}{0pt}
