Prevents text overflow on no-upgrade spells

--- a/latex/fillers/spell-preamble.tex
+++ b/latex/fillers/spell-preamble.tex
@@ -9,8 +9,9 @@
 	\newcolumntype{S}{>{\centering\arraybackslash}p{0.18\textwidth}}
 	\newcolumntype{M}[1]{>{\raggedleft\arraybackslash}m{#1}}
 
-%% Make the card the size of an MTG Card
-\usepackage[paperheight=8.89cm,paperwidth=6.35cm,margin=0.5cm]{geometry}
+	%% Layout and geometry
+	\usepackage[paperheight=8.89cm,paperwidth=6.35cm,margin=0.5cm]{geometry} %Make the card the size of an MTG Card
+	\usepackage{tikz}
 
 %% Set default path for images
 \graphicspath{{./../../images/}}
