--- a/latex/fillers/player-upgrade-filler.tex
+++ b/latex/fillers/player-upgrade-filler.tex
@@ -7,7 +7,7 @@
 		\vspace{1mm}
 		\centering
 		\textsc{upgrade}\\
-		\includegraphics[scale=0.2]{./images/requirements/upgrade-player.png}\\
+		\includegraphics[scale=0.2]{requirements/upgrade-player.png}\\
 		\tiny\textsc{player level}
 	\end{minipage}
 	\hfill
