--- a/latex/fillers/spell-preamble.tex
+++ b/latex/fillers/spell-preamble.tex
@@ -25,8 +25,8 @@
 %% Fonts and colors
 \usepackage{fontspec}
 \setmainfont[Path = ./../../fonts/,
-	UprightFont={mrs_eaves-roman},
-	BoldFont={mrs_eaves-bold}]
+	UprightFont={mrs_eaves-roman.otf},
+	BoldFont={mrs_eaves-bold.otf}]
 	{mrs_eaves}
 
 \definecolor{dnd-red}{RGB}{88,23,13}
